--- a/tools/convert_to_json/1.0.1/conver_to_json.yaml
+++ b/tools/convert_to_json/1.0.1/conver_to_json.yaml
@@ -1,3 +1,11 @@
+"""
+Title: Convert to JSON
+Author: BrandXX/UserX
+Version: 1.0.1
+License: MIT
+Description: This tool converts data provided from the chat into JSON format and returns it in a markdown code block.
+GitHub: https://github.com/BrandXX/open-webui/blob/main/tools/convert_to_json/
+"""
 import json
 
 
