--- a/tools/convert_to_json/DEV/convert_to_json.yaml
+++ b/tools/convert_to_json/DEV/convert_to_json.yaml
@@ -8,7 +8,9 @@ GitHub: https://github.com/BrandXX/open-webui/blob/main/tools/convert_to_json/
 Notes:
 - 1.0.4 beta
     - Added in COMPACT_PRINT Valve
-        - Toggle this <ON> for one Array per line or <OFF> for Prety Print
+        - Pretty-Printed JSON
+        - Compact JSON
+            - Toggle this <ON> for one Array per line or <OFF> for Prety Print
     - Code restructureing
 """
 
