--- a/tools/convert_to_json/DEV/convert_to_json.yaml
+++ b/tools/convert_to_json/DEV/convert_to_json.yaml
@@ -51,7 +51,7 @@ class Tools:
             description="The indentation level for the returned JSON.",
         )
         COMPACT_PRINT: bool = Field(
-            default=True,
+            default=False,
             description="Toggle between pretty-printed JSON and compact JSON.",
         )
 
