--- a/functions/unload_models_from_vram/.07/unload_models_from_vram.yaml
+++ b/functions/unload_models_from_vram/.07/unload_models_from_vram.yaml
@@ -7,6 +7,7 @@ description: |
 author: BrandXX/UserX
 author_url: https://github.com/BrandXX/open-webui/
 funding_url: https://github.com/BrandXX/open-webui/
+repo: https://github.com/BrandXX/open-webui/blob/main/functions/unload_models_from_vram/.07/unload_models_from_vram.yaml
 version: 1.0.0
 required_open_webui_version: 0.3.9
 Notes:
